--- a/index.html
+++ b/index.html
@@ -1,11 +1,64 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css" />
     <title>Document</title>
 </head>
+
 <body>
-    
+    <header class="header">
+        <div class="header__container">
+            <div class="menu">
+                <div class="logo menu__logo">
+                    <img src="img/img.svg" alt="logo" class="menu__image">
+                    <span class="menu__name">алготрейдинг</span>
+                </div>
+                <nav class="nav menu__nav">
+                    <a href="#header" class="nav__item nav__item1 ">Обучение торговле</a>
+                    <a href="#project" class="nav__item nav__item2">Аналитика</a>
+                    <a href="#design" class="nav__item nav__item3">О проекте</a>
+                </nav>
+                <div class="contacts menu__contacts ">
+                    <a href="#contacts" class="phone contacts__phone">8 (495) <span class="contacts__number">999-99-99</span></a>
+                </div>
+            </div>
+            <!-- /.menu -->
+        </div>
+        <!-- /.container -->
+    </header>
+    <!-- /.header -->
+    <main class="main">
+        <section class="hero">
+            <div class="container">
+                <h1 class="title hero__title">Курс алготрейдинга</h1>
+                <div class="hero__content">
+                    <p class="hero__text1">
+                        обучение алгоритмической торговле
+                    </p>
+                    <p class="hero__text2">
+                        Всего за месяц прямо на сессиях создайте<br>
+                        своего эффективного торгового робота с нуля!
+                    </p>
+                    <div class="hero__choice">
+                        <div class="hero__buttons">
+                            <button class="button hero__button-start">Начать обучение</button>
+                            <button class="button hero__button-more">узнать подробнее</button>
+                        </div>
+                        <p class="hero__thirty-days--text">
+                            Ваш собственный<br>
+                            прибыльный торговый робот<br>
+                            за <a href="#" class="thirty-days"> 30 дней!</a>
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <!-- /.hero -->
+    </main>
 </body>
+
 </html>
