feat: add two sections: header and hero

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div class="header__container">
             <div class="menu">
                 <div class="logo menu__logo">
-                    <img src="img/img.svg" alt="logo" class="menu__image">
-                    <span class="menu__name">алготрейдинг</span>
+                        <img src="img/img.svg" alt="logo" class="menu__image">
+                        <a href="/" class="menu__name">алготрейдинг</a>
                 </div>
                 <nav class="nav menu__nav">
                     <a href="#header" class="nav__item nav__item1 ">Обучение торговле</a>
@@ -22,7 +22,9 @@
                     <a href="#design" class="nav__item nav__item3">О проекте</a>
                 </nav>
                 <div class="contacts menu__contacts ">
-                    <a href="#contacts" class="phone contacts__phone">8 (495) <span class="contacts__number">999-99-99</span></a>
+                    <a href="#contacts" class="phone contacts__phone">8 (495) <span
+                            class="contacts__number">999-99-99</span>
+                    </a>
                 </div>
             </div>
             <!-- /.menu -->
@@ -53,11 +55,27 @@
                             за <a href="#" class="thirty-days"> 30 дней!</a>
                         </p>
                     </div>
+
                 </div>
 
             </div>
         </section>
         <!-- /.hero -->
+        <section class="section section95">
+            <div class="container">
+                <div class="hero__why">Почему робот?</div>
+                <div class="hero__reasons">
+                    <div class="hero__95">95<span class="hero__percent">%</span></div>
+                    <img src="img/hero-search.svg" alt="search-photo" class="search-photo">
+                    <img src="img/hero-settings.svg" alt="settings-photo">
+                </div>
+            </div>
+        </section>
+        <!-- /.section section95 -->
+        <section class="section reason">
+
+        </section>
+        <!-- /.section reason -->
     </main>
 </body>
 
