feat: add  all sections

--- a/index.html
+++ b/index.html
@@ -990,6 +990,47 @@
         </section>
         <!-- /.section questions -->
     </main>
+    <footer class="footer">
+        <div class="container footer__container">
+            <div class="row">
+                <h3 class="footer__h3">
+                    Алготрейдинг
+                </h3>
+                <input type="Email" placeholder="E-mail рассылка" class="footer__email" >
+            </div>
+            <div class="row">
+                <p class="footer__text">
+                    Обучение<br> алгоритмической<br> торговле
+                </p>
+                <p class="footer__text2">
+                    Аналитика<br>
+                    О проекте<br>
+                    Контакты
+                </p>
+                <p class="footer__text2 footer__text3">
+                    Вопросы и ответы<br>
+                    Записаться на курс
+                </p>
+                <div class="footer__socials">
+                    <div class="footer__b-social">
+                        <a href="#" class="footer__social"><img src="img/facebook.svg" alt="" class="social__image"></a>
+                    </div>
+                    <div class="footer__b-social">
+                        <a href="#" class="footer__social"><img src="img/b.svg" alt="" class="social__image"></a>
+                    </div>
+                    <div class="footer__b-social">
+                        <a href="#" class="footer__social"><img src="img/youtube.svg" alt="" class="social__image"></a>
+                    </div>
+                    <div class="footer__b-social">
+                        <a href="#" class="footer__social"><img src="img/inst.svg" alt="" class="social__image"></a>
+                    </div>
+                    <div class="footer__b-social">
+                        <a href="#" class="footer__social"><img src="img/up.svg" alt="" class="social__image"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
     <script src="../package/js/swiper.min.js"></script>
