--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <header class="header" id="header">
         <div class="header__container">
             <div class="menu">
                 <div class="logo menu__logo">
@@ -19,12 +19,12 @@
                     <a href="/" class="menu__name">алготрейдинг</a>
                 </div>
                 <nav class="nav menu__nav">
-                    <a href="#header" class="nav__item nav__item1 ">Обучение торговле</a>
-                    <a href="#project" class="nav__item nav__item2">Аналитика</a>
-                    <a href="#design" class="nav__item nav__item3">О проекте</a>
+                    <a href="#start-studying" class="nav__item nav__item1 ">Обучение торговле</a>
+                    <a href="#advantages" class="nav__item nav__item2">Аналитика</a>
+                    <a href="#process" class="nav__item nav__item3">О проекте</a>
                 </nav>
                 <div class="contacts menu__contacts ">
-                    <a href="#contacts" class="phone contacts__phone">8 (495) <span
+                    <a href="tel:+84959999999" class="phone contacts__phone">8 (495) <span
                             class="contacts__number">999-99-99</span>
                     </a>
                 </div>
@@ -48,7 +48,7 @@
                     </p>
                     <div class="hero__choice">
                         <div class="hero__buttons">
-                            <button class="button hero__button-start">Начать обучение</button>
+                            <button class="button hero__button-start" data-toggle="modal">Начать обучение</button>
                             <button class="button hero__button-more">узнать подробнее</button>
                         </div>
                         <p class="hero__thirty-days--text">
@@ -63,19 +63,16 @@
             </div>
         </section>
         <!-- /.hero -->
-        <section class="section section95">
-            <div class="container">
-                <div class="hero__why">Почему робот?</div>
-                <div class="hero__reasons">
-                    <div class="hero__95">95<span class="hero__percent">%</span></div>
+        <section class="section reason">
+            <div class="container reason__container">
+                <div class="reason__why">Почему робот?</div>
+                <div class="reason__reasonss">
+                    <p class="reason__p"><span class="reason__nine">95</span><span class="reason__percent">%</span></p>
+                   
                     <img src="img/hero-search.svg" alt="search-photo" class="search-photo">
                     <img src="img/hero-settings.svg" alt="settings-photo">
                 </div>
-            </div>
-        </section>
-        <!-- /.section section95 -->
-        <section class="section reason">
-            <div class="container reason__container">
+                
                 <div class="row">
                     <div class="col reason__col1">
                         <h3 class="h3 reason__h3">
@@ -126,7 +123,7 @@
                         в сфере алгоритмической торговли
                     </p>
                 </div>
-                <div class="row">
+                <div class="row create-own__row">
                     <div class="create-own__col1 create-own__col">
                         <p class="create-own__how-much">
                             <span class="create-own__much">Сколько бы Вы<br>
@@ -176,14 +173,14 @@
             </div>
         </section>
         <!-- /.section create-own -->
-        <section class="section start-studying">
+        <section class="section start-studying" id="start-studying">
             <div class="container">
                 <p class="start-studying__text">
                     Обучитесь алгоритмической торговле<br>
                     и уже <a href="#" class="start-studying__days">через 30 дней</a> создайте<br>
                     своего эффективного торгового робота!
                 </p>
-                <button class="button start-studying__button">
+                <button class="button start-studying__button"  data-toggle="modal">
                     Начать обучение
                 </button>
             </div>
@@ -275,7 +272,7 @@
                     финансов. Именно этот интерес меня подтолкнул получить высшее<br>
                     образование в сфере экономико-математического моделирования
                 </p>
-                <button class="button easy__button">
+                <button class="button easy__button"  data-toggle="modal">
                     Приступить к созданию своего доходного робота
                 </button>
             </div>
@@ -363,7 +360,7 @@
             </div>
         </section>
         <!-- /.section format -->
-        <section class="section process">
+        <section class="section process" id="process">
             <div class="container">
                 <h2 class="process__h2">
                     <span class="process__bold">Как выглядит </span>Ваш процесс<br>
@@ -635,7 +632,7 @@
                         <button class="button lesson__button-right">
                             Узнать подробнее
                         </button>
-                        <button class="button lesson__button-left">
+                        <button class="button lesson__button-left"  data-toggle="modal">
                             Начать обучение
                         </button>
                         <img src="img/next.png" class="swiper-button-nextt"></img>
@@ -645,7 +642,7 @@
             </div>
         </section>
         <!-- /.section lesson -->
-        <section class="section advantages">
+        <section class="section advantages" id="advantages">
             <div class="container advantages__container">
                 <h2 class="advantages__h2">
                     Преимущества курса
@@ -752,7 +749,7 @@
                         <li class="price__item">Ответы на вопросы </li>
                         <li class="price__item">Тех. поддержка</li>
                         <div class="price__buttons price__buttons1">
-                            <button class="button price__button">
+                            <button class="button price__button"  data-toggle="modal">
                                 Купить
                             </button>
                         </div>
@@ -769,7 +766,7 @@
                         </li>
                         <li class="price__item">Практика</li>
                         <div class="price__buttons price__buttons2">
-                            <button class="button price__button">
+                            <button class="button price__button"  data-toggle="modal">
                                 Купить
                             </button>
                         </div>
@@ -789,7 +786,7 @@
                         </li>
                         <li class="price__item">Максимум практики</li>
                         <div class="price__buttons price__buttons3">
-                            <button class="button price__button">
+                            <button class="button price__button"  data-toggle="modal">
                                 Купить
                             </button>
                         </div>
@@ -811,9 +808,10 @@
                     Убедитесь сами!
                 </p>
                 <form class="sform__form">
-                    <input type="text" placeholder="Имя" class="sform__name">
-                    <input type="number" class="sform__number" placeholder="Телефон">
-                    <input type="email" class="sform__email" placeholder="Email">
+                    <input type="text" name="userName" placeholder="Имя" class="sform__name" id="sform__userName">
+                    <input type="tel" name="userPhone" class="sform__number" placeholder="Телефон"
+                        id="sform__userPhone">
+                    <input type="email" name="userEmail" class="sform__email" placeholder="Email" id="sform__userEmail">
                     <button class="button sform__button">
                         Начать обучение
                     </button>
@@ -895,7 +893,7 @@
                     если Вам не понравятся<br>
                     первые 3 урока
                 </p>
-                <button class="button return__button">
+                <button class="button return__button"  data-toggle="modal">
                     Приступить к созданию своего доходного робота
                 </button>
             </div>
@@ -922,7 +920,7 @@
                         <li class="price__item">Ответы на вопросы </li>
                         <li class="price__item">Тех. поддержка</li>
                         <div class="price__buttons price__buttons1">
-                            <button class="button price__button">
+                            <button class="button price__button"  data-toggle="modal">
                                 Купить
                             </button>
                         </div>
@@ -941,7 +939,7 @@
                         <div class="price__buttons price__buttons2">
                             <button class="button price__button">
                                 Купить
-                            </button>
+                            </button  data-toggle="modal">
                         </div>
                     </div>
                     <div class="price__card">
@@ -959,7 +957,7 @@
                         </li>
                         <li class="price__item">Максимум практики</li>
                         <div class="price__buttons price__buttons3">
-                            <button class="button price__button">
+                            <button class="button price__button"  data-toggle="modal">
                                 Купить
                             </button>
                         </div>
@@ -979,9 +977,18 @@
                     в самое ближайшее время
                 </p>
                 <form action="" class="question__form">
-                    <input type="text" placeholder="Имя" class="question__name">
-                    <input type="number" class="question__number" placeholder="Телефон" class="question__number">
-                    <input type="email" class="question__email" placeholder="Email" class="question__email">
+                    <div class="input-group">
+                        <input type="text" name="userName" placeholder="Имя" class="question__name"
+                            id="question__userName">
+                    </div>
+                    <div class="input-group">
+                        <input type="tel" name="userPhone" class="question__number" placeholder="Телефон"
+                            class="question__number" id="question__userPhone">
+                    </div>
+                    <div class="input-group">
+                        <input type="email" name="userEmail" class="question__email" placeholder="Email"
+                            class="question__email" id="question__userEmail">
+                    </div>
                     <button class="button question__button">
                         Свяжитесь со мной
                     </button>
@@ -996,7 +1003,7 @@
                 <h3 class="footer__h3">
                     Алготрейдинг
                 </h3>
-                <input type="Email" placeholder="E-mail рассылка" class="footer__email" >
+                <input type="Email" placeholder="E-mail рассылка" class="footer__email">
             </div>
             <div class="row">
                 <p class="footer__text">
@@ -1013,27 +1020,58 @@
                 </p>
                 <div class="footer__socials">
                     <div class="footer__b-social">
-                        <a href="#" class="footer__social"><img src="img/facebook.svg" alt="" class="social__image"></a>
+                        <a href="bananchich@face.com" class="footer__social"><img src="img/facebook.svg" alt=""
+                                class="social__image"></a>
                     </div>
                     <div class="footer__b-social">
-                        <a href="#" class="footer__social"><img src="img/b.svg" alt="" class="social__image"></a>
+                        <a href="mailto:bananckick@bebo.com" class="footer__social"><img src="img/b.svg" alt=""
+                                class="social__image"></a>
                     </div>
                     <div class="footer__b-social">
-                        <a href="#" class="footer__social"><img src="img/youtube.svg" alt="" class="social__image"></a>
+                        <a href="mailto:www.youtube.com" class="footer__social"><img src="img/youtube.svg" alt=""
+                                class="social__image"></a>
                     </div>
                     <div class="footer__b-social">
-                        <a href="#" class="footer__social"><img src="img/inst.svg" alt="" class="social__image"></a>
+                        <a href="mailto:instagram.com" class="footer__social"><img src="img/inst.svg" alt=""
+                                class="social__image"></a>
                     </div>
                     <div class="footer__b-social">
-                        <a href="#" class="footer__social"><img src="img/up.svg" alt="" class="social__image"></a>
+                        <a href="#header" class="footer__social"><img src="img/up.svg" alt="" class="social__image"></a>
                     </div>
                 </div>
             </div>
         </div>
     </footer>
+    <div class="modal" id="modal__id">
+        <div class="modal__dialog">
+            <button class="modal__close"></button>
+            <h3 class="modal__title">Оставьте заявку и наш менеджер свяжеться с вами</h3>
+            <form action="page.php" method="POST" class="modal__form">
+                <div class="input-group modal__input-group">
+                    <input type="text" name="userName" class="input  modal__input imput--light" id="modal__userName"
+                        placeholder="Как вас зовут:">
+                </div>
+                <div class="input-group modal__input-group">
+                    <input type="tel" name="userPhone" class="input modal__input imput--light" id="modal__userPhone"
+                        placeholder="Ваш номер телефона:">
+                </div>
+                <div class="input-group modal__input-group">
+                    <input type="email" name="userEmail" class="input modal__input imput--light" id="modal__userEmail"
+                        placeholder="Ваш Email:">
+                </div>
+                <div class="policy modal__policy">
+                    <input type="checkbox" name="policyCheckbox" class="policy__checkbox" id="policy-checkbox3" checked>
+                    <label for="policy-checkbox3" class="policy__label">Я соглашаюсь с обработкой данных</label>
+                </div>
+                <button class="button button--primary modal__button">Отправить заявку</button>
+            </form>
+        </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
     <script src="../package/js/swiper.min.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
+    <script src="js/jquery.mask.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 
